@@ -3,21 +3,26 @@ package com.santander.peliculacrud.service.impl;
 import com.santander.peliculacrud.model.api.ActorRepository;
 import com.santander.peliculacrud.model.api.DirectorRepository;
 import com.santander.peliculacrud.model.api.FilmRepository;
-import com.santander.peliculacrud.model.bo.ActorBO;
+
 import com.santander.peliculacrud.model.bo.FilmBO;
 import com.santander.peliculacrud.model.entity.Actor;
 import com.santander.peliculacrud.model.entity.Director;
 import com.santander.peliculacrud.model.entity.Film;
 import com.santander.peliculacrud.service.FilmServiceInterface;
-import com.santander.peliculacrud.util.mapper.FilmBOMapper;
-import org.mapstruct.factory.Mappers;
+import com.santander.peliculacrud.util.CommonOperation;
+import com.santander.peliculacrud.util.exception.GenericException;
+import com.santander.peliculacrud.util.mapper.bo.FilmBOMapper;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * The type Film service.
@@ -25,19 +30,37 @@ import java.util.stream.Collectors;
 @Service
 public class FilmService implements FilmServiceInterface {
 
-    @Autowired
-    private FilmRepository filmRepository;
-
-    @Autowired
-    private ActorRepository actorRepository;
-
-    @Autowired
-    private DirectorRepository directorRepository;
-
-    @Autowired
-    private final FilmBOMapper filmBOMapper = Mappers.getMapper(FilmBOMapper.class);
+    private final FilmRepository filmRepository;
+    private final ActorRepository actorRepository;
+    private final DirectorRepository directorRepository;
+    private final FilmBOMapper filmBOMapper;
+    private final CommonOperation commonOperation;
 
     private static final Logger logger = LoggerFactory.getLogger(FilmService.class);
+
+    /**
+     * Instantiates a new Film service.
+     *
+     * @param actorRepository
+     *         the actor repository
+     * @param directorRepository
+     *         the director repository
+     * @param commonOperation
+     *         the common operation
+     * @param filmBOMapper
+     *         the film bo mapper
+     * @param filmRepository
+     *         the film repository
+     */
+    @Autowired
+    public FilmService(ActorRepository actorRepository, DirectorRepository directorRepository,
+            CommonOperation commonOperation, FilmBOMapper filmBOMapper, FilmRepository filmRepository) {
+        this.actorRepository = actorRepository;
+        this.commonOperation = commonOperation;
+        this.directorRepository = directorRepository;
+        this.filmBOMapper = filmBOMapper;
+        this.filmRepository = filmRepository;
+    }
 
     /**
      * Create film boolean.
@@ -47,13 +70,13 @@ public class FilmService implements FilmServiceInterface {
      * @return the boolean
      */
 
-    public FilmBO createFilm(FilmBO filmBO) {
+    public FilmBO createFilm(FilmBO filmBO) throws GenericException {
 
-        FilmBO filmBOReturn = FilmBO.builder().build();
+        FilmBO filmBOReturn;
 
         //Se comprueba que los directores y actores se encuentran en el repositorio
         Director director = directorRepository.findById(filmBO.getDirector().getId()).orElse(null);
-        List<Long> idActors = getIdActors(filmBO.getActors());
+        List<Long> idActors = commonOperation.getIdObject(Collections.singletonList(filmBO.getActors()));
         List<Actor> actors = actorRepository.findAllById(idActors);
 
         if (director != null && !actors.isEmpty()) {
@@ -65,24 +88,22 @@ public class FilmService implements FilmServiceInterface {
                 filmBOReturn = filmBOMapper.entityToBo(filmAux);
 
             } catch (Exception e) {
-                logger.error("Failed to create actor: {}", e.getMessage());
-                throw new RuntimeException("Failed to create actor: ", e);
+                throw new GenericException("Failed to create actor: ", e);
             }
         } else {
-            logger.error("Failed to create actor invalid director or actor");
-            throw new RuntimeException("Failed to create actor invalid director or actor");
+            throw new GenericException("Failed to create actor invalid director or actor");
         }
 
         return filmBOReturn;
     }
 
     @Override
-    public FilmBO updateFilm(Long id, FilmBO filmBO) {
+    public FilmBO updateFilm(Long id, FilmBO filmBO) throws GenericException {
         FilmBO filmBOReturn = FilmBO.builder().build();
         if (filmRepository.existsById(id)) {
 
             Director director = directorRepository.findById(filmBO.getDirector().getId()).orElse(null);
-            List<Long> idActors = getIdActors(filmBO.getActors());
+            List<Long> idActors = commonOperation.getIdObject(Collections.singletonList(filmBO.getActors()));
             List<Actor> actors = actorRepository.findAllById(idActors);
 
             if (director != null && !actors.isEmpty()) {
@@ -94,7 +115,7 @@ public class FilmService implements FilmServiceInterface {
 
             } else {
                 logger.error("Failed to update actor invalid director or actor");
-                throw new RuntimeException("Failed to update actor invalid director or actor");
+                throw new GenericException("Failed to update actor invalid director or actor");
             }
         } else {
             filmNotfound();
@@ -104,27 +125,20 @@ public class FilmService implements FilmServiceInterface {
     }
 
     @Override
-    public List<FilmBO> getAllFilm() {
-        List<Film> films = filmRepository.findAll();
-
-        return filmBOMapper.listEntityListBo(films);
-    }
-
-    @Override
-    public boolean deleteFilm(Long id) {
+    public boolean deleteFilm(Long id) throws GenericException {
         boolean deleted = false;
         if (id != null) {
 
             if (filmRepository.existsById(id)) {
 
-                    filmRepository.deleteById(id);
-                    deleted = true;
+                filmRepository.deleteById(id);
+                deleted = true;
 
             } else {
                 filmNotfound();
             }
         } else {
-            throw new RuntimeException("Invalid film id: null");
+            throw new GenericException("Invalid film id: null");
 
         }
 
@@ -138,13 +152,56 @@ public class FilmService implements FilmServiceInterface {
         return filmBOMapper.entityToBo(film);
     }
 
-    private List<Long> getIdActors(List<ActorBO> actorBOS) {
-        return actorBOS.stream().map(ActorBO::getId).collect(Collectors.toList());
+    @Override
+    public List<FilmBO> getAllFilm(int page) {
+        Pageable pageable = PageRequest.of(page, 5);
+
+        Page<Film> filmsPage = filmRepository.findAll(pageable);
+        List<FilmBO> films = filmBOMapper.listEntityListBo(filmsPage);
+        return films.stream().sorted(Comparator.comparing(FilmBO::getTitle)).toList();
     }
 
-    private void filmNotfound() {
+    @Override
+    public List<FilmBO> getFilmByTitle(String title, int page) {
+        Pageable pageable = PageRequest.of(page, 5);
+        Page<Film> filmPage = filmRepository.findAllByTitle(title, pageable);
+        List<FilmBO> films = filmBOMapper.listEntityListBo(filmPage);
+
+        return films.stream().sorted(Comparator.comparing(FilmBO::getTitle)).toList();
+    }
+
+    @Override
+    public List<FilmBO> getFilmByCreated(int created, int page) {
+        Pageable pageable = PageRequest.of(page, 5);
+        Page<Film> filmPage = filmRepository.findAllByCreated(created, pageable);
+        List<FilmBO> films = filmBOMapper.listEntityListBo(filmPage);
+
+        return films.stream().sorted(Comparator.comparingInt(FilmBO::getCreated)).toList();
+    }
+
+    @Override
+    public List<FilmBO> getFilmByActors(List<String> actorsName, int page) {
+        Pageable pageable = PageRequest.of(page, 5);
+        List<Actor> actors = actorRepository.findByNameIn(actorsName);
+        Page<Film> filmsPage = filmRepository.findAllByActorsIn(Collections.singleton(actors), pageable);
+        List<FilmBO> films = filmBOMapper.listEntityListBo(filmsPage);
+
+        return films.stream().sorted(Comparator.comparingInt(FilmBO::getCreated)).toList();
+    }
+
+    @Override
+    public List<FilmBO> getFilmByDirectors(List<String> directorsName, int page) {
+        Pageable pageable = PageRequest.of(page, 5);
+        List<Director> directors = directorRepository.findByNameIn(directorsName);
+        Page<Film> filmsPage = filmRepository.findAllByDirectorIn(directors, pageable);
+        List<FilmBO> films = filmBOMapper.listEntityListBo(filmsPage);
+
+        return films.stream().sorted(Comparator.comparingInt(FilmBO::getCreated)).toList();
+    }
+
+    private void filmNotfound() throws GenericException {
         logger.error("Film not found");
-        throw new RuntimeException("Film not found");
+        throw new GenericException("Film not found");
 
     }
 
